Add host to env
